StringBuilder 코드 수정